Went ahead and created the initial file templates for StepDefinition and EventDefinition.  Reinstalled add-in and both show up and work when adding a new file.  Just need to finish adding the xml to pass the arguments into the attributes for Given, When, Then for the StepDefinition and the code comments for the methods in both templates.

--- a/MonoDevelopIntegration/MonoDevelop.TechTalk.SpecFlow.csproj
+++ b/MonoDevelopIntegration/MonoDevelop.TechTalk.SpecFlow.csproj
@@ -38,6 +38,18 @@
     <EmbeddedResource Include="Gui\SpecFlowFeatureIcon.ico">
       <LogicalName>SpecFlowFeatureIcon.ico</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="Gui\SpecFlowEventDefinitionIcon.ico">
+      <LogicalName>SpecFlowEventDefinitionIcon.ico</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gui\SpecFlowStepDefinitionIcon.ico">
+      <LogicalName>SpecFlowStepDefinitionIcon.ico</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\SpecFlowStepDefinition.xft.xml">
+      <LogicalName>SpecFlowStepDefinition.xft.xml</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\SpecFlowEventDefinition.xft.xml">
+      <LogicalName>SpecFlowEventDefinition.xft.xml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Templates\" />
