Finished hooking up the custom tool to call into the SpecFlow Generator.  When a feature file is created or saved, it creates the feature code file.  The MonoDevelop add-in is complete.  The only difference between it and the Visual Studio one is VB support.

--- a/MonoDevelopIntegration/MonoDevelop.TechTalk.SpecFlow.csproj
+++ b/MonoDevelopIntegration/MonoDevelop.TechTalk.SpecFlow.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SingleFeatureFileGenerator.cs" />
+    <Compile Include="MonoDevelopProjectReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Generator\TechTalk.SpecFlow.Generator.csproj">
