--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -78,11 +78,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GherkinFileClassifierFormat.cs" />
-    <Compile Include="GherkinFileClassificationDefinition.cs" />
-    <Compile Include="GherkinFileClassifier.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileClassifierFormats.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileClassificationDefinition.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileClassifier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyntaxColoringListener.cs" />
+    <Compile Include="GherkinFileEditor\SyntaxColoringListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="source.extension.vsixmanifest">
