--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -132,8 +132,11 @@
     <Compile Include="GherkinFileEditor\GherkinFileClassifierFormats.cs" />
     <Compile Include="GherkinFileEditor\GherkinFileClassificationDefinition.cs" />
     <Compile Include="GherkinFileEditor\GherkinFileClassifier.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileEditorClassifications.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileEditorInfo.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileEditorParser.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileEditorParserListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="GherkinFileEditor\SyntaxColoringListener.cs" />
     <Compile Include="SingleFileGenerator\SpecFlowSingleFileGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
