--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -136,6 +136,7 @@
     <Compile Include="GherkinFileEditor\GherkinFileEditorInfo.cs" />
     <Compile Include="GherkinFileEditor\GherkinFileEditorParser.cs" />
     <Compile Include="GherkinFileEditor\GherkinFileEditorParserListener.cs" />
+    <Compile Include="GherkinFileEditor\GherkinFileOutliningTagger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingleFileGenerator\SpecFlowSingleFileGenerator.cs" />
   </ItemGroup>
