fix VS2010 SDK?

--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -17,6 +17,7 @@
     <CopyVsixExtensionFiles>True</CopyVsixExtensionFiles>
     <VsSDKInstall>..\..\lib\VS2010SDK</VsSDKInstall>
     <VsixSchemaPath>$(VsSDKInstall)\VSIXManifestSchema.xsd</VsixSchemaPath>
+    <BypassVsixValidation>true</BypassVsixValidation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
