install item templates from local folder

--- a/Vs2008Integration/TechTalk.SpecFlow.Vs2008Integration.csproj
+++ b/Vs2008Integration/TechTalk.SpecFlow.Vs2008Integration.csproj
@@ -121,6 +121,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
