Re-generate feature file when a new version of SpecFlow is installed

--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -168,6 +168,7 @@
     <Compile Include="AutoComplete\CompletionCommandFilter.cs" />
     <Compile Include="AutoComplete\GherkinCompletionCommandFilter.cs" />
     <Compile Include="AutoComplete\CompletionSource.cs" />
+    <Compile Include="LanguageService\VsProjectFeatureFileTracker.cs" />
     <Compile Include="SpecFlowServices.cs" />
     <Compile Include="DteProjectReader.cs" />
     <Compile Include="Guids.cs" />
