--- a/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
+++ b/Vs2010Integration/TechTalk.SpecFlow.Vs2010Integration.csproj
@@ -168,8 +168,11 @@
     <Compile Include="AutoComplete\CompletionCommandFilter.cs" />
     <Compile Include="AutoComplete\GherkinCompletionCommandFilter.cs" />
     <Compile Include="AutoComplete\CompletionSource.cs" />
+    <Compile Include="Bindings\BindingType.cs" />
     <Compile Include="LanguageService\ProjectFeatureFilesTracker.cs" />
-    <Compile Include="LanguageService\ProjectStepSuggestionProvider.cs" />
+    <Compile Include="LanguageService\VsBindingMethod.cs" />
+    <Compile Include="LanguageService\VsStepSuggestionBindingCollector.cs" />
+    <Compile Include="LanguageService\VsStepSuggestionProvider.cs" />
     <Compile Include="SpecFlowServices.cs" />
     <Compile Include="DteProjectReader.cs" />
     <Compile Include="Guids.cs" />
@@ -177,7 +180,14 @@
     <Compile Include="LanguageService\GherkinBufferServiceManager.cs" />
     <Compile Include="LanguageService\NoProjectScope.cs" />
     <Compile Include="LanguageService\VsProjectScope.cs" />
+    <Compile Include="StepSuggestions\BoundStepSuggestions.cs" />
+    <Compile Include="StepSuggestions\INativeSuggestionItemFactory.cs" />
+    <Compile Include="StepSuggestions\IStepSuggestion.cs" />
+    <Compile Include="StepSuggestions\StepInstance.cs" />
+    <Compile Include="StepSuggestions\StepInstanceTemplate.cs" />
+    <Compile Include="StepSuggestions\StepSuggestionProvider.cs" />
     <Compile Include="Utils\RegexDictionary.cs" />
+    <Compile Include="Utils\StringLiteralHelper.cs" />
     <Compile Include="Utils\VsProjectFileTracker.cs" />
     <Compile Include="Utils\DteWithEvents.cs" />
     <Compile Include="Utils\EnumerableExtensions.cs" />
@@ -223,7 +233,7 @@
     <Compile Include="Tracing\OutputWindowDefinitions.cs" />
     <Compile Include="Tracing\OutputWindow\VsOutputWindowPaneAdapter.cs" />
     <Compile Include="Tracing\VisualStudioTracer.cs" />
-    <Compile Include="VsxHelper.cs" />
+    <Compile Include="Utils\VsxHelper.cs" />
     <Compile Include="..\Vs2008Integration\CodeGeneratorRegistrationAttribute.cs">
       <Link>SingleFileGenerator\CodeGeneratorRegistrationAttribute.cs</Link>
     </Compile>
